# pyladies-kurz

./: .gitignore  README.md  cli.py  course.json  course.yml  pyproject.toml
lessons/: pyproject.toml
lessons/pydata/api/: index.ipynb
lessons/pydata/classification_bonus/: 2sp.txt  index.ipynb  info.yml
lessons/pydata/classification_metrics/: index.ipynb  info.yml
lessons/pydata/classification_resume/: index.md
lessons/pydata/dashboards/: Procfile  app.py  index.ipynb  penguins_size_nona.csv  requirements.txt
lessons/pydata/dashboards-2/: index.ipynb  info.yml
lessons/pydata/databases/: index.ipynb  info.yml  main.ipynb  world.sqlite
lessons/pydata/eda-univariate-timeseries/: data-daily.xlsx  data_download_chmi.ipynb  index.ipynb  reseni.ipynb  weather_data.ipynb
lessons/pydata/homework_revisited/: homework_solution.ipynb  index.ipynb  index_na_hodinu.ipynb  index_na_hodinu_2025.ipynb
lessons/pydata/install/: index.md
lessons/pydata/intro_classification/: index.ipynb
lessons/pydata/intro_regression/: index.ipynb
lessons/pydata/ml1_home_prep/: index.md
lessons/pydata/notebook/: index.md
lessons/pydata/pandas_core/: index.ipynb
lessons/pydata/pandas_correlations/: index.ipynb  info.yml
lessons/pydata/pandas_groupby/: index.ipynb  serk.csv
lessons/pydata/pandas_joins/: index.ipynb  info.yml
lessons/pydata/pandas_types/: .gitignore  countries.csv  index.ipynb
lessons/pydata/pca/: info.yml
lessons/pydata/regression_exercises/: index.ipynb
lessons/pydata/regression_metrics/: index.ipynb
lessons/pydata/regression_resume/: index.ipynb
(+36 files in other folders)
