[project]
name = "pyladies-kurz"
version = "2024.9.1"
description = "Kurz pro PyLadies"
authors = [
    {name = "Jan Pipek", email = "jan.pipek@gmail.com"},
    {name = "Jakub Urban", email = "coobas@gmail.com"}
]
requires-python = ">=3.9"
dependencies = [
    "naucse>=0.5.2",
    "Jinja2>=3.0.0",
    "ipython>=8.4.0",
    "ghp-import~=2.1.0",
    "jupyter-book>=2.0.0b3",
]

[tool.uv.workspace]
members = ["lessons"]
