[project]
name = "lessons"
version = "0.1.0"
description = "PyLadies kurz"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "jupyter>=1.1.1",
    "matplotlib>=3.9.2",
    "meteostat>=1.7.4",
    "numpy>=2.0.2",
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "plotly>=5.24.1",
    "pyarrow>=21.0.0",
    "requests>=2.32.3",
    "scikit-learn>=1.5.2",
    "scipy>=1.13.1",
    "seaborn>=0.13.2",
    "sqlalchemy>=2.0.35",
    "xlrd>=2.0.1",
]
